@@ -196,9 +196,16 @@ describe "Model#before_create && Model#after_create" do
     ]
   end
 
-  specify "should cancel the save if before_create returns false" do
+  specify ".create should cancel the save and raise an error if before_create returns false and raise_on_save_failure is true" do
     @c.before_create{false}
-    @c.create(:x => 2).should == false
+    proc{@c.create(:x => 2)}.should raise_error(Sequel::Error)
+    MODEL_DB.sqls.should == []
+  end
+
+  specify ".create should cancel the save and return nil if before_create returns false and raise_on_save_failure is false" do
+    @c.before_create{false}
+    @c.raise_on_save_failure = false
+    @c.create(:x => 2).should == nil
     MODEL_DB.sqls.should == []
   end
 end
@@ -223,9 +230,16 @@ describe "Model#before_update && Model#after_update" do
     ]
   end
 
-  specify "should cancel the save if before_update returns false" do
+  specify "#save should cancel the save and raise an error if before_update returns false and raise_on_save_failure is true" do
     @c.before_update{false}
-    @c.load(:id => 2233).save.should == false
+    proc{@c.load(:id => 2233).save}.should raise_error(Sequel::Error)
+    MODEL_DB.sqls.should == []
+  end
+
+  specify "#save should cancel the save and return nil if before_update returns false and raise_on_save_failure is false" do
+    @c.before_update{false}
+    @c.raise_on_save_failure = false
+    @c.load(:id => 2233).save.should == nil
     MODEL_DB.sqls.should == []
   end
 end
@@ -236,12 +250,12 @@ describe "Model#before_save && Model#after_save" do
 
     @c = Class.new(Sequel::Model(:items)) do
       columns :x
-      before_save {MODEL_DB << "BLAH before"}
       after_save {MODEL_DB << "BLAH after"}
     end
   end
   
   specify "should be called around record update" do
+    @c.before_save {MODEL_DB << "BLAH before"}
     m = @c.load(:id => 2233)
     m.save
     MODEL_DB.sqls.should == [
@@ -252,6 +266,7 @@ describe "Model#before_save && Model#after_save" do
   end
   
   specify "should be called around record creation" do
+    @c.before_save {MODEL_DB << "BLAH before"}
     @c.no_primary_key
     @c.create(:x => 2)
     MODEL_DB.sqls.should == [
@@ -261,10 +276,17 @@ describe "Model#before_save && Model#after_save" do
     ]
   end
 
-  specify "should cancel the save if before_save returns false" do
+  specify "#save should cancel the save and raise an error if before_save returns false and raise_on_save_failure is true" do
     @c.before_save{false}
-    @c.load(:id => 2233).save.should == false
-    MODEL_DB.sqls.should == ["BLAH before"]
+    proc{@c.load(:id => 2233).save}.should raise_error(Sequel::Error)
+    MODEL_DB.sqls.should == []
+  end
+
+  specify "#save should cancel the save and return nil if before_save returns false and raise_on_save_failure is false" do
+    @c.before_save{false}
+    @c.raise_on_save_failure = false
+    @c.load(:id => 2233).save.should == nil
+    MODEL_DB.sqls.should == []
   end
 end
 
@@ -292,9 +314,16 @@ describe "Model#before_destroy && Model#after_destroy" do
     ]
   end
 
-  specify "should cancel the destroy if before_destroy returns false" do
+  specify "#destroy should cancel the destroy and raise an error if before_destroy returns false and raise_on_save_failure is true" do
     @c.before_destroy{false}
-    @c.load(:id => 2233).destroy.should == false
+    proc{@c.load(:id => 2233).destroy}.should raise_error(Sequel::Error)
+    MODEL_DB.sqls.should == []
+  end
+
+  specify "#destroy should cancel the destroy and return nil if before_destroy returns false and raise_on_save_failure is false" do
+    @c.before_destroy{false}
+    @c.raise_on_save_failure = false
+    @c.load(:id => 2233).destroy.should == nil
     MODEL_DB.sqls.should == []
   end
 end
@@ -304,7 +333,6 @@ describe "Model#before_validation && Model#after_validation" do
     MODEL_DB.reset
 
     @c = Class.new(Sequel::Model(:items)) do
-      before_validation{MODEL_DB << "BLAH before"}
       after_validation{MODEL_DB << "BLAH after"}
 
       def self.validate(o)
@@ -320,6 +348,7 @@ describe "Model#before_validation && Model#after_validation" do
   end
   
   specify "should be called around validation" do
+    @c.before_validation{MODEL_DB << "BLAH before"}
     m = @c.new(:id => 2233)
     m.should be_valid
     MODEL_DB.sqls.should == ['BLAH before', 'BLAH after']
@@ -331,20 +360,29 @@ describe "Model#before_validation && Model#after_validation" do
   end
 
   specify "should be called when calling save" do
+    @c.before_validation{MODEL_DB << "BLAH before"}
     m = @c.new(:id => 2233)
     m.save.should == m
     MODEL_DB.sqls.should == ['BLAH before', 'BLAH after', 'CREATE BLAH']
 
     MODEL_DB.sqls.clear
     m = @c.new(:id => 22)
-    m.save.should == false
+    m.raise_on_save_failure = false
+    m.save.should == nil
     MODEL_DB.sqls.should == ['BLAH before', 'BLAH after']
   end
 
-  specify "should cancel the save if before_validation returns false" do
+  specify "#save should cancel the save and raise an error if before_validation returns false and raise_on_save_failure is true" do
     @c.before_validation{false}
-    @c.load(:id => 2233).save.should == false
-    MODEL_DB.sqls.should == ["BLAH before"]
+    proc{@c.load(:id => 2233).save}.should raise_error(Sequel::Error)
+    MODEL_DB.sqls.should == []
+  end
+
+  specify "#save should cancel the save and return nil if before_validation returns false and raise_on_save_failure is false" do
+    @c.before_validation{false}
+    @c.raise_on_save_failure = false
+    @c.load(:id => 2233).save.should == nil
+    MODEL_DB.sqls.should == []
   end
 end
 
