@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Model.raise_on_save_failure, raising errors on save failure instead of return false (now nil), default to true (jeremyevans)
+
 * Add :eager_loader association option, to specify code to be run when eager loading (jeremyevans)
 
 * Make :many_to_one associations support :dataset, :order, :limit association options, as well as block arguments (jeremyevans)
